examples/test/testpolicy19229.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19229
  namespace: namespace489
spec:
  podSelector:
    matchLabels:
      key6: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key39: value43
          key10: value13
          key32: value7
      podSelector:
        matchLabels:
          key17: value34
